fixed title truncation

--- a/src/app/teams/teams-view.scss
+++ b/src/app/teams/teams-view.scss
@@ -8,7 +8,7 @@
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     grid-auto-rows: 180px;
     &.member-cards {
-      grid-auto-rows: 280px;
+      grid-auto-rows: 320px;
       mat-card-content {
         max-height: 149px;
       }
@@ -24,6 +24,8 @@
     }
 
     mat-card {
+      height: 90%;
+      width: 90%;
       display: flex;
       flex-direction: column;
 
